Sidebar jump-to correct margin

--- a/assets/scss/layout/_sidebar.scss
+++ b/assets/scss/layout/_sidebar.scss
@@ -53,6 +53,7 @@ aside,
 		top: $space;
 		background: rgba(255, 255, 255, .92);
 		z-index: 1;
+		@extend .band--extra-thick;
 	}
 
 }
